statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app-database

  serviceName: mysqldb

  template:
    metadata:
      labels:
        app: app-database

    spec:
      containers:
        - name: dbcont
          image: sgyadav/phpapp:dbimage

          ports:
            - containerPort: 3306

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

          volumeMounts:
            - name: mysql-storage
              mountPath: /usr/share/nginx/html/

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: pvc-1
